add video of me climbing to start and finish a climb section

--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,13 @@ article img{
     margin: 0;
     width: 100%;
     height: auto;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+video{
+    width: 100%;
+    height: auto;
+    border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 /* main header with logo*/
